--- a/views/index.html
+++ b/views/index.html
@@ -867,3 +867,220 @@
         </div>
       </body>
     </html>
+    <html>
+      <head>
+        <style>
+          .image-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+          }
+
+          .image-container img {
+            margin: 5px;
+          }
+        </style>
+      </head>
+      <body>
+        <div class="image-container">
+      <div>
+        <a href="/items/3550622" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F09%2F17%2F40%2F24%2F9c0b7ec7-de45-4e22-bbed-6942d16c38ce%2F15076_qPxCWioX4l1MxM2mY5cvUQ.jpg" /></a><br>
+        <span>Price: 22 000</span><br>
+        <span>Location: İsmayıllı</span>
+      </div>
+    
+      <div>
+        <a href="/items/3615755" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F09%2F10%2F37%2F59%2F21d7c41b-a850-4c4d-8890-79a0f0223c53%2F43682_7C2u4EAh3F1ocTRtQp2WdA.jpg" /></a><br>
+        <span>Price: 89 500</span><br>
+        <span>Location: Nəsimi r.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3624619" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F13%2F01%2F09%2F47%2F6c484433-f188-4f4c-be76-f123a27e020f%2F35459_AUu39V-CUmyFL2xjmFOQNQ.jpg" /></a><br>
+        <span>Price: 65 000</span><br>
+        <span>Location: 20-ci sahə q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/2577505" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2022%2F01%2F21%2F18%2F57%2F29%2Fd5987524-cf6f-4db9-aedc-29020c73824e%2F30771_Z7O80UI0ql8TMe0pvYn41w.jpg" /></a><br>
+        <span>Price: 350 000</span><br>
+        <span>Location: Mərdəkan q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/2644833" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2022%2F02%2F24%2F12%2F37%2F16%2F0ac0b7b9-27c2-4a93-98de-a56982648c0b%2F73212_7AUxk3y9jb4EeUs3dGh6mQ.jpg" /></a><br>
+        <span>Price: 1 300</span><br>
+        <span>Location: Nəsimi r.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3618981" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F10%2F17%2F31%2F03%2Fb8fa583d-6ba1-421b-b05d-c58aa1ff9d51%2F40038_wZ2cZyDPCre_cGXCyHa2Iw.jpg" /></a><br>
+        <span>Price: 1 600</span><br>
+        <span>Location: Nərimanov r.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3570625" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F18%2F20%2F01%2F37%2Fe635b459-0bae-4669-81b7-774a612cdce1%2F94146_Wkzgj1DNUJ7aXAWTyUfrgQ.jpg" /></a><br>
+        <span>Price: 1 400 000</span><br>
+        <span>Location: Avtovağzal m.</span>
+      </div>
+    
+      <div>
+        <a href="/yasayis-kompleksleri/222" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2021%2F12%2F23%2F10%2F45%2F56%2F1056a88b-2c8a-4c97-93ae-42789c3d7fdf%2F20163_pAoeMQsPbYBLD1hlbFHBEA.jpg" /></a><br>
+        <span>Price: 83 680</span><br>
+        <span>Location: Bakı</span>
+      </div>
+    
+      <div>
+        <a href="/items/3629210" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F14%2F20%2F55%2F16%2F8fe9afe1-5dc0-41f7-8818-d0fec6e4b8eb%2F82148_26nm9oR9itYi45aK5i8q3g.jpg" /></a><br>
+        <span>Price: 110 000</span><br>
+        <span>Location: Ağ şəhər q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3499590" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F18%2F22%2F58%2F07%2F7d841ca8-1947-4ee1-9591-1c9a5786550c%2F81214_w1ip98Z_uxsPtAMbKDK4AA.jpg" /></a><br>
+        <span>Price: 125 000</span><br>
+        <span>Location: Bakıxanov q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3609595" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F06%2F14%2F39%2F19%2F22d99f04-9efd-46ef-8ddb-e42c2a7e2b17%2F21505_SGp7r8RJ5ZzzT5uwypqMeA.jpg" /></a><br>
+        <span>Price: 899</span><br>
+        <span>Location: Badamdar q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3412429" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F04%2F12%2F00%2F27%2F44%2Fa930aa61-2c99-41b3-86e2-7ce54e34a94e%2F52075_V7jxuQlxRlE1N2pa011FSw.jpg" /></a><br>
+        <span>Price: 148 000</span><br>
+        <span>Location: Nəriman Nərimanov m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3500388" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F19%2F12%2F49%2F24%2Fcd205a2c-a0f3-418e-89e2-9bbcc3447eee%2F15352_P6ZVpb51U4KTEQUQeWg1tA.jpg" /></a><br>
+        <span>Price: 60 000</span><br>
+        <span>Location: Nardaran q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3568243" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F17%2F14%2F26%2F25%2Fda6b631d-677f-4201-8df5-32077682531c%2F98516_uF2Ubbbb2e07PXG7PMo0Xw.jpg" /></a><br>
+        <span>Price: 150 000</span><br>
+        <span>Location: Görədil q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3622096" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F12%2F02%2F13%2F45%2F0e339f95-a847-4646-bdb1-7a88ba720b5e%2F82143_lh5at1ubvAOOxPzNlkQ60Q.jpg" /></a><br>
+        <span>Price: 125 000</span><br>
+        <span>Location: Yeni Ramana q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3622552" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F12%2F11%2F45%2F55%2F78b8c68b-52d1-4801-b774-430a4aba5642%2F35458_LLURFno4QaF1ezIYBHKDOA.jpg" /></a><br>
+        <span>Price: 295 000</span><br>
+        <span>Location: Şah İsmayıl Xətai m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3625072" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F13%2F11%2F55%2F02%2Fb6acffa6-689d-4670-aefb-160bfec8eede%2F40044_JtSmACtjfsvv6WwCFY0V8Q.jpg" /></a><br>
+        <span>Price: 1 800</span><br>
+        <span>Location: Şah İsmayıl Xətai m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3312560" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F02%2F27%2F14%2F34%2F52%2Ff0cba8de-5033-4a20-9bf0-7c06fc98a6a5%2F27278_xywjV9JFAH4Y54ERcTZYnw.jpg" /></a><br>
+        <span>Price: 1 380 000</span><br>
+        <span>Location: Ağ şəhər q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3370209" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F03%2F25%2F18%2F36%2F53%2F9c2841f3-99bf-4764-b73e-8f047a257b4a%2F98108_jNv2Q3P_i7W6F8bX3v-8aw.jpg" /></a><br>
+        <span>Price: 1 400 000</span><br>
+        <span>Location: Gəncə</span>
+      </div>
+    
+      <div>
+        <a href="/items/3570462" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F18%2F17%2F58%2F59%2Fd4008c19-0de6-4384-a76d-a39e0b27ad85%2F60321_7TzDWe0cXnpJ138irD8vTQ.jpg" /></a><br>
+        <span>Price: 123 000</span><br>
+        <span>Location: Badamdar q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3448583" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F19%2F13%2F06%2F35%2F72f0183a-b08d-41ff-a5db-ed19e8852f3e%2F82418_optqDHL-VX9kHFj57Q21uw.jpg" /></a><br>
+        <span>Price: 278 000</span><br>
+        <span>Location: Nəriman Nərimanov m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3454584" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F04%2F30%2F12%2F21%2F43%2Ffe8798e1-5e42-4430-a478-4141a942977b%2F36579_B_tabEpb4YuFEYy1en8Dyw.jpg" /></a><br>
+        <span>Price: 215 000</span><br>
+        <span>Location: Nəsimi r.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3616833" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F09%2F19%2F30%2F02%2Fe6ea1bda-8e03-4f4a-911e-2d7f9ea51653%2F74315_HjvsGr8OryAACeoK9BUR7Q.jpg" /></a><br>
+        <span>Price: 500 000</span><br>
+        <span>Location: Ağ şəhər q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3237220" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F01%2F27%2F10%2F35%2F39%2F0a551fa9-7b4b-4f2b-8edd-ef2921c47bdc%2F29487_IOwdoa4N7mk4g6J_us4lCA.jpg" /></a><br>
+        <span>Price: 262 000</span><br>
+        <span>Location: Nərimanov r.</span>
+      </div>
+    
+      <div>
+        <a href="/items/2778212" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2022%2F05%2F09%2F22%2F40%2F48%2F6316d2a1-8a6e-4dde-8aac-ce7a86f80d5e%2F2048_5GyP3QtbRCf6zE8V9Pu0bg.jpg" /></a><br>
+        <span>Price: 290 000</span><br>
+        <span>Location: Nardaran q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3537436" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F04%2F14%2F01%2F35%2F63eb8ae1-bf32-415f-ada7-ca3763b09caa%2F40132_vDGIIsrHbkSeE4WNDQAgpQ.jpg" /></a><br>
+        <span>Price: 69 000</span><br>
+        <span>Location: 7-ci mikrorayon q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3624886" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F13%2F11%2F10%2F40%2Fb5ba3a7e-6bd3-4626-affe-a7764e10a8eb%2F35481_V2ejgIwduUqy6u2PnppnBQ.jpg" /></a><br>
+        <span>Price: 185 000</span><br>
+        <span>Location: Səbail r.</span>
+      </div>
+    
+      <div>
+        <a href="/items/2553128" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F27%2F19%2F49%2F13%2Fe1351770-ae3f-4ecd-a2c5-030ac1392a0e%2F52883_xmSh8wX1okNibE2RtgkYcg.jpg" /></a><br>
+        <span>Price: 1 170 000</span><br>
+        <span>Location: Yasamal q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3592200" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F28%2F14%2F38%2F07%2F0cf3a756-71de-461b-9601-ded61a6a609d%2F60333_xzT3U7X-gVPo6j_puIhQzg.jpg" /></a><br>
+        <span>Price: 200</span><br>
+        <span>Location: Mərdəkan q.</span>
+      </div>
+    
+      <div>
+        <a href="/yasayis-kompleksleri/82" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2022%2F11%2F12%2F19%2F14%2F01%2F25c9a6b5-f7ac-459a-848c-d43a3cd9059a%2F37592_-6h4OV8QRMcp3fh4myfbOA.jpg" /></a><br>
+        <span>Price: 367 152</span><br>
+        <span>Location: Gənclik m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3481586" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F11%2F16%2F00%2F49%2F18c172be-71b4-4181-8e77-e821e429d082%2F36588_gnNj3zg-vxQhY3HiHkI50A.jpg" /></a><br>
+        <span>Price: 43 000</span><br>
+        <span>Location: Binə q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3073335" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F16%2F14%2F22%2F07%2F6291ba2f-2dc1-4017-8dbb-18ad092b5240%2F60345_r3_UWB4_IsHzBdfbV_kcOg.jpg" /></a><br>
+        <span>Price: 75 200</span><br>
+        <span>Location: 7-ci mikrorayon q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3632864" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F16%2F23%2F21%2F34%2F8076fc0c-e2e2-490d-936e-4bf299700f1d%2F40046_eeye53aCvB2MDc4RUUEh5w.jpg" /></a><br>
+        <span>Price: 55 000</span><br>
+        <span>Location: Sulutəpə q.</span>
+      </div>
+    
+        </div>
+      </body>
+    </html>
