--- a/views/index.html
+++ b/views/index.html
@@ -1084,3 +1084,214 @@
         </div>
       </body>
     </html>
+    <html>
+      <head>
+        <style>
+          .image-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+          }
+
+          .image-container img {
+            margin: 5px;
+          }
+        </style>
+      </head>
+      <body>
+        <div class="image-container">
+      <div>
+        <a href="/items/3230258" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F01%2F24%2F12%2F37%2F53%2Fe7d5b5a0-64a0-4d23-af19-400cfc41ce8d%2F21652_Lqz_EmW3y6lB2wVgfVbsKQ.jpg" /></a><br>
+        <span>Price: 170</span><br>
+        <span>Location: Novxanı q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3611008" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F07%2F06%2F14%2F15%2Fce3dbc91-25a9-4520-be26-e216f262bb2e%2F74287_3VWe7nQ0WC3bjG4MgWy_iA.jpg" /></a><br>
+        <span>Price: 134 000</span><br>
+        <span>Location: 8-ci mikrorayon q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3608402" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F16%2F23%2F01%2F17%2Fc5f54804-5588-4019-ab83-8f44e4df7793%2F82101_7XI5QTTGxSFRVn7SqL8K4Q.jpg" /></a><br>
+        <span>Price: 120 000</span><br>
+        <span>Location: Şah İsmayıl Xətai m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3531556" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F01%2F17%2F29%2F13%2F7a9b83f7-4053-4efb-89fb-bca055192707%2F21130_v4TpN6TvjU0llGuXvfiYbg.jpg" /></a><br>
+        <span>Price: 950 000</span><br>
+        <span>Location: Badamdar q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3553421" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F11%2F06%2F42%2F50%2F8a7e3f0c-dea5-4096-bcf9-f6474037e18f%2F79823_O02HVhWHWgmw32lM_6aMWQ.jpg" /></a><br>
+        <span>Price: 540 000</span><br>
+        <span>Location: Mərdəkan q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3469191" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F23%2F15%2F00%2F25%2F1fa6ace2-2f6e-4232-b20e-29bdca5bcf10%2F15318_SKd5nbeK-9hXpfSWyRaQ1A.jpg" /></a><br>
+        <span>Price: 720 000</span><br>
+        <span>Location: Nəsimi r.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3587245" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F26%2F00%2F46%2F13%2F6117132f-b0b5-4b29-8abb-e2eccdd8a365%2F98854_do39hy6k4DrrowxCKoNxbQ.jpg" /></a><br>
+        <span>Price: 415 000</span><br>
+        <span>Location: Nizami m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3568949" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F17%2F18%2F19%2F17%2F20664a7a-c010-43e1-943e-12a48aeea8d0%2F79838_YGYUPzYw3vPWZq8HUXQPQw.jpg" /></a><br>
+        <span>Price: 105 000</span><br>
+        <span>Location: Masazır q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3515880" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F25%2F17%2F13%2F56%2F72dff047-71b1-4712-bc91-fc9c08df2996%2F14276_d_VWIV0ZM61kDeZF6M1XuA.jpg" /></a><br>
+        <span>Price: 980 000</span><br>
+        <span>Location: Masazır q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3629473" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F15%2F02%2F34%2F54%2Fcf4a5cfb-78b5-40c6-a8e5-b5dcfa6920db%2F35502_3uVX9nTYqZn5LPFVR8Sg_g.jpg" /></a><br>
+        <span>Price: 200</span><br>
+        <span>Location: Qəbələ</span>
+      </div>
+    
+      <div>
+        <a href="/items/3473740" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F08%2F15%2F21%2F10%2Feb7daed0-f424-4340-8529-633999bff31f%2F36583_deF7KdJD0JoFQE75e_pQCQ.jpg" /></a><br>
+        <span>Price: 230 000</span><br>
+        <span>Location: Nəsimi r.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3481264" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F11%2F14%2F53%2F38%2Fa1d64058-2e99-4eea-bef2-e65bc1f136b0%2F35632_dp4M2uR8YJdY_uCPA0_1ug.jpg" /></a><br>
+        <span>Price: 105 555</span><br>
+        <span>Location: 20 Yanvar m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3602699" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F03%2F17%2F34%2F36%2Fa6d29b74-9b3f-4559-aa7f-9eb7d49338af%2F93340_SoQP0ox6hcjtiI--WXQgjA.jpg" /></a><br>
+        <span>Price: 190 000</span><br>
+        <span>Location: Şah İsmayıl Xətai m.</span>
+      </div>
+    
+      <div>
+        <a href="/yasayis-kompleksleri/221" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2021%2F12%2F24%2F09%2F56%2F33%2F32b8b7c3-5503-494f-a93f-b605167ba2b9%2F39270_k24v95IQ2X3qiVT8ZFKwrw.jpg" /></a><br>
+        <span>Price: 583 145</span><br>
+        <span>Location: Bakı</span>
+      </div>
+    
+      <div>
+        <a href="/items/3262831" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F02%2F07%2F12%2F28%2F37%2Fcdb7d29b-bf47-430d-96dd-781229aabc60%2F29508_qIFVm_99Y_nyi_rVrL_-rg.jpg" /></a><br>
+        <span>Price: 191 000</span><br>
+        <span>Location: Həzi Aslanov q.</span>
+      </div>
+    
+      <div>
+        <a href="/yasayis-kompleksleri/63" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F31%2F17%2F25%2F09%2F0e22766a-03ab-4f4c-a9d5-f112d10dfa5f%2F21134_FLe7n743HtRM7B2zDzW2zQ.jpg" /></a><br>
+        <span>Price: 143 362</span><br>
+        <span>Location: Yeni Günəşli q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3519347" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F27%2F11%2F25%2F41%2Faed1d4a2-939b-493a-a980-c1832aa21b87%2F52867_ATXAhIeWoslRML6x4te8rw.jpg" /></a><br>
+        <span>Price: 370 000</span><br>
+        <span>Location: Novxanı q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3607141" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F05%2F15%2F32%2F45%2F3660ca21-f442-4feb-88ed-42f9df019e5e%2F87754_BU4JThoLjHbAdoBwpkz5AA.jpg" /></a><br>
+        <span>Price: 464</span><br>
+        <span>Location: Dərnəgül m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3539696" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F05%2F15%2F06%2F10%2Ff9cf775e-b1bb-4112-92a2-05cc71ccff5c%2F20999_Lg7U46XneAqOHlw1bCfFnQ.jpg" /></a><br>
+        <span>Price: 1 000</span><br>
+        <span>Location: Neftçilər m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3463641" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F04%2F11%2F15%2F43%2F64e2ba52-4abb-4272-a3f9-ce694dbbe108%2F36594_ivqy-B3DaXjn2bTj6TQLKA.jpg" /></a><br>
+        <span>Price: 1 450 000</span><br>
+        <span>Location: Buzovna q.</span>
+      </div>
+    
+      <div>
+        <a href="/yasayis-kompleksleri/221" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2021%2F12%2F24%2F09%2F56%2F33%2F32b8b7c3-5503-494f-a93f-b605167ba2b9%2F39270_k24v95IQ2X3qiVT8ZFKwrw.jpg" /></a><br>
+        <span>Price: 523 621</span><br>
+        <span>Location: Bakı</span>
+      </div>
+    
+      <div>
+        <a href="/yasayis-kompleksleri/63" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F31%2F17%2F25%2F09%2F0e22766a-03ab-4f4c-a9d5-f112d10dfa5f%2F21134_FLe7n743HtRM7B2zDzW2zQ.jpg" /></a><br>
+        <span>Price: 150 875</span><br>
+        <span>Location: Yeni Günəşli q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3632859" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F16%2F23%2F17%2F18%2F006039e4-f9cd-4770-b695-1cf4e906b7d8%2F82014_CvJoR-so01XBoaf9UpngAQ.jpg" /></a><br>
+        <span>Price: 90 000</span><br>
+        <span>Location: Şüvəlan q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3588673" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F26%2F16%2F31%2F23%2Fd05ceedf-71a1-4f87-a8cc-97eda9001d40%2F3458_s2ta2OSGgCuBaS0aM6G0tw.jpg" /></a><br>
+        <span>Price: 220 000</span><br>
+        <span>Location: Nizami m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3385286" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F03%2F31%2F20%2F54%2F25%2F059bdeaf-fdc0-4453-91aa-a769b2cffbbb%2F52800_-zKifBHv-8KG_k8drxirYg.jpg" /></a><br>
+        <span>Price: 395 000</span><br>
+        <span>Location: Sumqayıt</span>
+      </div>
+    
+      <div>
+        <a href="/items/3531906" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F01%2F19%2F45%2F42%2Fa2b79bb9-3dd8-4162-8654-43b3f72fdbe7%2F40121_ZADP0I5qJpPTatr0Mvh3JQ.jpg" /></a><br>
+        <span>Price: 140 000</span><br>
+        <span>Location: Xırdalan</span>
+      </div>
+    
+      <div>
+        <a href="/items/3438434" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F04%2F23%2F11%2F01%2F15%2F8d1b6815-b955-4e5f-9506-906f3106ec49%2F91436_kVFJ3LnNsWVLOIRxsexIYg.jpg" /></a><br>
+        <span>Price: 4 500</span><br>
+        <span>Location: Nardaran q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3630278" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F15%2F14%2F07%2F16%2F9eafe80d-398d-4ba6-94dc-fdaae954965c%2F82143_Ok7Mw2O2zHqgrL9KG_BugA.jpg" /></a><br>
+        <span>Price: 230</span><br>
+        <span>Location: Şüvəlan q.</span>
+      </div>
+    
+      <div>
+        <a href="/yasayis-kompleksleri/261" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2022%2F08%2F15%2F16%2F39%2F28%2F85c1449d-92d0-49fc-96a6-37fd41f29a12%2F32125_GCiEzpx-zFpRJqbUeDF7Jw.jpg" /></a><br>
+        <span>Price: 273 084</span><br>
+        <span>Location: Bakı</span>
+      </div>
+    
+      <div>
+        <a href="/items/2715074" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2022%2F04%2F02%2F13%2F20%2F52%2F999cb0a5-5b71-40b0-8244-c9bf94dfa20a%2F91537_zPigqtJznZgoxsiYGwrcWA.jpg" /></a><br>
+        <span>Price: 8 190</span><br>
+        <span>Location: Suraxanı r.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3607516" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F05%2F16%2F58%2F01%2F13f3590c-2d6c-4213-9e94-8e887cf1f626%2F87701_NP7PJ2-WYy1Qys1EccfcRQ.jpg" /></a><br>
+        <span>Price: 1 200</span><br>
+        <span>Location: Şah İsmayıl Xətai m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3629525" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F15%2F09%2F07%2F50%2Fe397de84-5705-4546-8d2a-1c33bfb26534%2F40035_4316CAZ2ViB6eKSiRndRwQ.jpg" /></a><br>
+        <span>Price: 95 000</span><br>
+        <span>Location: Abşeron r.</span>
+      </div>
+    
+        </div>
+      </body>
+    </html>
