--- a/views/index.html
+++ b/views/index.html
@@ -1295,3 +1295,220 @@
         </div>
       </body>
     </html>
+    <html>
+      <head>
+        <style>
+          .image-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+          }
+
+          .image-container img {
+            margin: 5px;
+          }
+        </style>
+      </head>
+      <body>
+        <div class="image-container">
+      <div>
+        <a href="/items/3581717" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F23%2F13%2F10%2F17%2F14ba6f17-f49d-41db-93c7-83a003a7e2b3%2F93743_s4L-ZIf3LRjmdLgU5CX5Ag.jpg" /></a><br>
+        <span>Price: 360 000</span><br>
+        <span>Location: 28 May m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3590022" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F27%2F12%2F38%2F23%2F826f72ba-4320-4fbb-973d-a0b3c2edbc01%2F60321_wxfVQBIJBnU9WclIk-Z7IA.jpg" /></a><br>
+        <span>Price: 150</span><br>
+        <span>Location: Qəbələ</span>
+      </div>
+    
+      <div>
+        <a href="/items/3603652" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F04%2F11%2F20%2F44%2Fb366c983-e926-4fc5-85e8-c72354bf6571%2F60356_3jel9NlqrYLiSalv-fh5cg.jpg" /></a><br>
+        <span>Price: 111 000</span><br>
+        <span>Location: Əhmədli q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3568257" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F17%2F14%2F21%2F01%2F6bbb65fc-0eff-4f35-a047-6f7fb67a3d85%2F99073_KdnRJ9TAq38JYZutGWUl6A.jpg" /></a><br>
+        <span>Price: 350 000</span><br>
+        <span>Location: Nardaran q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3362191" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F03%2F22%2F13%2F22%2F21%2Fb6358c67-b891-4acd-ab71-291d17a70bf0%2F72628_6A1w3xY91GNOhSoYFnV9vw.jpg" /></a><br>
+        <span>Price: 300 000</span><br>
+        <span>Location: Masazır q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3623767" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F12%2F16%2F39%2F58%2F57e8f94b-ea19-49ba-8046-ddbb0f5dec9c%2F35494_l18JJafhfpytbSy5pyU_4Q.jpg" /></a><br>
+        <span>Price: 190 000</span><br>
+        <span>Location: Şah İsmayıl Xətai m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3611821" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F07%2F13%2F19%2F00%2F8a8308f6-5fb8-4dfd-a14d-3170242cc16a%2F43675_MxC2aVtwnl3-oFV1dbb17A.jpg" /></a><br>
+        <span>Price: 750</span><br>
+        <span>Location: Neftçilər m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3288319" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F02%2F17%2F15%2F22%2F14%2Fee0569d0-f9bb-4256-92c6-7a18f4a869c3%2F73401_nEv0JAJKlZ51iZg8KcFgvg.jpg" /></a><br>
+        <span>Price: 3 600 000</span><br>
+        <span>Location: İçəri Şəhər m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3543975" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F07%2F11%2F10%2F51%2F32e34971-8dfb-4671-9533-31170ca1fd7d%2F40075_eVk4XqY3vqhryk9VifxQfQ.jpg" /></a><br>
+        <span>Price: 2 500</span><br>
+        <span>Location: Ağ şəhər q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/1738469" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2020%2F10%2F21%2F11%2F40%2F33%2F8effc649-7191-48e1-9d8f-e57db42cd971%2F80654_HQLEbH1z9xVPptJHWVqoPw.jpg" /></a><br>
+        <span>Price: 400 000</span><br>
+        <span>Location: Nəsimi m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3542826" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F06%2F17%2F03%2F28%2F8c5701c4-0ef3-459e-8a04-06fafa89fa15%2F40087_c81z5aYmMbsvgoEs8KhbJw.jpg" /></a><br>
+        <span>Price: 167 000</span><br>
+        <span>Location: 8-ci mikrorayon q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3631253" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F15%2F20%2F24%2F30%2F20353f98-c981-4a67-9b92-67c15734e5b2%2F40011_Tqq9avozLXgcb51OuRRL6A.jpg" /></a><br>
+        <span>Price: 102 000</span><br>
+        <span>Location: Azadlıq Prospekti m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3553890" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F11%2F13%2F13%2F32%2Fb09f3137-17f5-43cf-9abf-b1e7791ebfa6%2F60351_VXVSuCnkhx9mFkQAs01zxQ.jpg" /></a><br>
+        <span>Price: 134 800</span><br>
+        <span>Location: Masazır q.</span>
+      </div>
+    
+      <div>
+        <a href="/yasayis-kompleksleri/284" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F16%2F14%2F23%2F21%2F17d22e13-8ea7-456b-a2be-352d10a69fcc%2F81188_vU61335UQKrWGz5bO82kCQ.jpg" /></a><br>
+        <span>Price: 561 051</span><br>
+        <span>Location: Sabunçu r.</span>
+      </div>
+    
+      <div>
+        <a href="/items/2533086" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F16%2F14%2F25%2F31%2F0e3eaa59-1dc3-4ea6-935b-e74093d99805%2F98863_oHo7zTnvVleU6SqNk3dK9w.jpg" /></a><br>
+        <span>Price: 110 880</span><br>
+        <span>Location: 7-ci mikrorayon q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3620528" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F11%2F13%2F29%2F25%2F49118d63-cc96-4478-ae2d-05705a3e66d2%2F40054_U-y9Jj7fHFW3P1RhVNoIbw.jpg" /></a><br>
+        <span>Price: 118 000</span><br>
+        <span>Location: Xalqlar Dostluğu m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3438434" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F04%2F23%2F11%2F01%2F15%2F8d1b6815-b955-4e5f-9506-906f3106ec49%2F91436_kVFJ3LnNsWVLOIRxsexIYg.jpg" /></a><br>
+        <span>Price: 4 500</span><br>
+        <span>Location: Nardaran q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3593242" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F29%2F11%2F27%2F40%2F80a1d3fa-9449-45ad-9803-17f63f525baa%2F98759_alG-4qEuCApRprZDs_GrkA.jpg" /></a><br>
+        <span>Price: 250</span><br>
+        <span>Location: Novxanı q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3623563" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F12%2F15%2F59%2F00%2F0b6be901-fa4a-4ed8-9949-970a05a48571%2F35488_y6m1OiSSuUkX63rx6xdZiw.jpg" /></a><br>
+        <span>Price: 98 000</span><br>
+        <span>Location: Nardaran q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3606632" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F06%2F15%2F55%2F30%2Fa68fb8ab-dd6d-4f39-8c98-521750b3d7ab%2F21477_g6rDzD6j7Oq_EaDYD1Vg-g.jpg" /></a><br>
+        <span>Price: 700</span><br>
+        <span>Location: İçəri Şəhər m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3628776" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F14%2F17%2F36%2F49%2Fbaa3e192-64ff-4274-8905-776e7a987974%2F35460_9-jzFzDhtIu1lPculFQYSQ.jpg" /></a><br>
+        <span>Price: 20 000</span><br>
+        <span>Location: Müşfiqabad q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3599686" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F16%2F12%2F09%2F51%2Fb4d17f5c-8181-40cd-a707-23a53df4ee54%2F40062_6mU67GDFiEJqguC_IxxTTg.jpg" /></a><br>
+        <span>Price: 240 000</span><br>
+        <span>Location: 8 Noyabr m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3073307" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F16%2F14%2F20%2F17%2Ff301d2ef-59e3-4e46-b517-7565c6fb07d2%2F79816_Pmx_lMhhYFoRRpTPJmPy7g.jpg" /></a><br>
+        <span>Price: 113 557</span><br>
+        <span>Location: 7-ci mikrorayon q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3073322" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F06%2F16%2F14%2F19%2F11%2Fbdaee477-7961-4655-8866-01371c0e8885%2F98894_n6pjbdaGRUfeIZXcp2NUgg.jpg" /></a><br>
+        <span>Price: 111 668</span><br>
+        <span>Location: 7-ci mikrorayon q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3290551" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F02%2F18%2F13%2F26%2F16%2Fcdffec4d-d682-4f3d-bf48-01fe552273e8%2F29485_NkayANZgUBsmGg-AmtjYkA.jpg" /></a><br>
+        <span>Price: 650 000</span><br>
+        <span>Location: Memar Əcəmi m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3521213" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F28%2F21%2F10%2F26%2F77f9f218-cf46-4d06-b3c4-91c680b04120%2F52870_rtUCm8qgucap_GMW3e2SMQ.jpg" /></a><br>
+        <span>Price: 3 000</span><br>
+        <span>Location: Nərimanov r.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3105590" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2022%2F11%2F17%2F20%2F30%2F59%2Fd71d593d-08a7-44ac-a9d3-7bdb942fd3b5%2F37613_mnFNUG4A27uvv0tb7xji5A.jpg" /></a><br>
+        <span>Price: 5 000 000</span><br>
+        <span>Location: Badamdar q.</span>
+      </div>
+    
+      <div>
+        <a href="/yasayis-kompleksleri/63" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F05%2F31%2F17%2F25%2F09%2F0e22766a-03ab-4f4c-a9d5-f112d10dfa5f%2F21134_FLe7n743HtRM7B2zDzW2zQ.jpg" /></a><br>
+        <span>Price: 134 437</span><br>
+        <span>Location: Yeni Günəşli q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3230258" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F01%2F24%2F12%2F37%2F53%2Fe7d5b5a0-64a0-4d23-af19-400cfc41ce8d%2F21652_Lqz_EmW3y6lB2wVgfVbsKQ.jpg" /></a><br>
+        <span>Price: 170</span><br>
+        <span>Location: Novxanı q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3582441" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F08%2F21%2F39%2F15%2F31626af0-4a97-48ba-b415-41da450c1b31%2F74265_os2ZktM1UbzHVqEmnSBW8Q.jpg" /></a><br>
+        <span>Price: 207 900</span><br>
+        <span>Location: Səbail r.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3608082" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F05%2F19%2F38%2F16%2F14dc8f00-0b10-4320-bbe3-3549fca22698%2F66273_LLbTDPu_qvxLb628sXHDtQ.jpg" /></a><br>
+        <span>Price: 185 500</span><br>
+        <span>Location: Bakıxanov q.</span>
+      </div>
+    
+      <div>
+        <a href="/items/3626115" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2023%2F07%2F13%2F16%2F24%2F20%2F572bf804-1465-4f7e-a34b-103c778505aa%2F40059_OvOU2VCqmdLhUTHTK1dStA.jpg" /></a><br>
+        <span>Price: 300</span><br>
+        <span>Location: Azadlıq Prospekti m.</span>
+      </div>
+    
+      <div>
+        <a href="/items/2535810" target="_blank"><img src="https://bina.azstatic.com/uploads/f460x345/2022%2F11%2F22%2F15%2F16%2F55%2F2960fb5b-bf75-41dd-95ba-590d35b8e7da%2F37629_f7Krxpmm2P4icQa6-5GoBA.jpg" /></a><br>
+        <span>Price: 365 000</span><br>
+        <span>Location: Nizami m.</span>
+      </div>
+    
+        </div>
+      </body>
+    </html>
