--- a/utils/email/template/welcome.handlebars
+++ b/utils/email/template/welcome.handlebars
@@ -7,7 +7,7 @@
     <body>
         <p>Hi {{name}},</p>
         <p>Thank you for Signing up!</p>
-        <p>Welcome To MySun Inc. !</p>
+        <p>Welcome To Lux Properties. !</p>
         <p>We welcome you on this journey!</p>
     </body>
 </html>
