--- a/utils/email/template/loanRequest.handlebars
+++ b/utils/email/template/loanRequest.handlebars
@@ -10,6 +10,7 @@
         <p>Name: {{name}}</p>
         <p>Email: {{email}}</p>
         <p>Phone: {{phone}}</p>
+        <p>Message: {{message}}</p>
         <p>Regards,</p>
         <p>Emlakci!</p>
     </body>
